@@ -10,9 +10,6 @@
 
   <properties>
     <java.version>20</java.version>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>${java.version}</maven.compiler.source>
-    <maven.compiler.target>${java.version}</maven.compiler.target>
     <junit-jupiter.version>5.9.2</junit-jupiter.version>
     <annotations.version>24.0.1</annotations.version>
     <slf4j.version>2.0.6</slf4j.version>
@@ -56,9 +53,12 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>${maven.compiler.source}</source>
-          <target>${maven.compiler.target}</target>
-          <compilerArgs>--enable-preview</compilerArgs>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
+          <compilerArgs>
+            <arg>--add-modules=jdk.incubator.concurrent</arg>
+            <arg>--enable-preview</arg>
+          </compilerArgs>
         </configuration>
         <version>3.11.0</version>
       </plugin>
@@ -67,7 +67,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0</version>
         <configuration>
-          <argLine>--enable-preview</argLine>
+          <argLine>--enable-preview --add-modules=jdk.incubator.concurrent</argLine>
         </configuration>
       </plugin>
     </plugins>
